--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 html {  /*   ~~~  MOBILE CSS HERE!!!! ~~~  */
-
     box-sizing: border-box;
 }
 
@@ -109,9 +108,15 @@ button:hover {
 
 .footer-bar {
     padding: 32px;
-    background-color: #1B1F35;
+    background-color: rgb(1, 1, 1);
     color: #4D59AC;
     width: 100%;
+}
+
+hr {
+    border: 1px solid #1B1F35;
+    margin-bottom: 32px;
+    max-width: 960px;
 }
 
 .footer-flex-1 {
@@ -148,25 +153,39 @@ button:hover {
 
 .left-margin {
     margin: 0 32px;
-    vertical-align: center;
 }
 
-.bottom-margin {
-    margin-bottom: 16px;
+.padding-left {
+    padding-left: 32px;
+}
+
+.margin-32 {
+    margin: 32px;
+}
+
+.top-margin {
+    margin-top: 32px;
 }
 
 .download {
     margin-bottom: 32px;
+    padding-left: 32px;
 }
 
-.portrait img {
+.portrait {
     width: 100%;
-    height: auto;
+    height: 280px;
+    background-image: url("img/ckantz_portrait.jpg");
+    background-size: cover;
 }
 
 .about {
     line-height: 26px;
-    padding: 32px 32px 0 32px;
+    padding: 0 32px;
+}
+
+.about-h2 {
+    margin: 32px;
 }
 .contact-icons {
     margin: 32px 32px 48px 32px;
@@ -200,6 +219,14 @@ button:hover {
     display: none;
 }
 
+.contact-wave {
+    margin: 32px 0 64px 0;
+}
+
+.contact-h1 {
+    margin-left: 32px;
+}
+
 @media(min-width: 600px) { /*   ~~~  DESKTOP CSS HERE!!!! ~~~  */
 
 
@@ -219,18 +246,20 @@ button:hover {
 }
 
 
-
 .home-bg {
     background-image: url("img/home-bg.jpg");
     background-color: rgb(1, 1, 1);
     background-size: 800px auto;
-    background-position: top 55% right -160px;
+    background-position: top -300px right -160px;
     background-repeat: no-repeat;
-    min-height: auto;
 }
 
 .home-bg h1 {
-    margin-top: 100px;
+    margin-top: 132px;
+}
+
+.footer-bar {
+   background-color: rgb(1, 1, 1);
 }
 
 .home-content button {
@@ -247,15 +276,36 @@ button:hover {
     margin: 0 auto;
 }
 
-@media(min-width: 750px) { /*   ~~~  fix line break on home h2 ~~~  */
+.contact-h1 {
+    margin-top: 100px;
+}
+.left-margin h1 {
+    padding-left: 32px;
+}
+
+.portrait {
+    background-image: url("img/ckantz_portrait.jpg");
+    width: 100%;
+    height: 300px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 0 -40px;
+}
+
+.contact-wave {
+    margin: 32px 0 100px 0;
+}
+
+}
+
+@media(min-width: 750px) { /*   ~~~  fix line break on home h2 and text on about~~~  */
 
 .home-content h2 br {
     display: none;
 }
 
-
-
-
-
+.about {
+    max-width: 750px;
+}
 
 }
